# asteroid-os-pokedex

./: .gitignore  CMakeLists.txt  README.md  init_app.sh  poke-dex.desktop.template  push.sh  push_db.sh  runscript.in
i18n/: poke-dex.desktop.h
init/: go.mod  go.sum  main.go
src/: CMakeLists.txt  GenerationItem.qml  Pokemon.qml  PokemonItem.qml  main.cpp  main.qml  resources.qrc
